--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
 <head>
 <title> Basic Calculator</title>
+<script src= "add.js"> </script>
 </head>
 <body>
 <p> Basic Calculator Application</p>
 
-First number: <input type="text"  id ="first no"/> <br/><br/>
-Second number: <input type="text" id ="second"/> <br/><br/>
+First number: <input type="text"  id ="firstno"/> <br/><br/>
+Second number: <input type="text" id ="secondno"/> <br/><br/>
 
 Result : <input type="text" id="result" /> <br/><br/>
 
-<button> add</button> <button> substract</button>
+<button onclick= "add()"> add</button> <button> substract</button>
 </body>
 </html> 
 
