--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title> Basic Calculator</title>
 <script src= "add.js"> </script>
+<script src= "sub.js"> </script>
 </head>
 <body>
 <p> Basic Calculator Application</p>
@@ -11,7 +12,7 @@ Second number: <input type="text" id ="secondno"/> <br/><br/>
 
 Result : <input type="text" id="result" /> <br/><br/>
 
-<button onclick= "add()"> add</button> <button> substract</button>
+<button onclick= "add()"> add</button> <button onclick="sub()"> substract</button>
 </body>
 </html> 
 
