--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title> Basic Calculator</title>
 <script src= "add.js"> </script>
 <script src= "sub.js"> </script>
+<script src= "mul.js"> </script>
+
 </head>
 <body>
 <p> Basic Calculator Application</p>
@@ -12,7 +14,7 @@ Second number: <input type="text" id ="secondno"/> <br/><br/>
 
 Result : <input type="text" id="result" /> <br/><br/>
 
-<button onclick= "add()"> add</button> <button onclick="sub()"> substract</button>
+<button onclick= "add()"> add</button> <button onclick="sub()"> substract</button> <button onclick="mul()"> multiply </button>
 </body>
 </html> 
 
